metadata-sfdx/force-app/main/default/objects/becquerel_qs_dollar_balance__x/becquerel_qs_dollar_balance__x.object-meta.xml
<CustomObject>
    <description>becquerel__qs_dollar_balance</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__qs_dollar_balance</externalName>
    <label>becquerel__qs_dollar_balance</label>
    <pluralLabel>becquerel__qs_dollar_balance</pluralLabel>
</CustomObject>