metadata-sfdx/force-app/main/default/objects/becquerel_qs_dollar_balance__x/fields/uct_balance_state__c.field-meta.xml
<CustomField>
    <fullName>uct_balance_state__c</fullName>
    <description>uct_balance_state</description>
    <externalDeveloperName>uct_balance_state</externalDeveloperName>
    <label>uct_balance_state</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>