metadata-sfdx/force-app/main/default/objects/becquerel_qs_dollar_balance__x/fields/uct_promotional_balance_cents__c.field-meta.xml
<CustomField>
    <fullName>uct_promotional_balance_cents__c</fullName>
    <description>uct_promotional_balance_cents</description>
    <externalDeveloperName>uct_promotional_balance_cents</externalDeveloperName>
    <label>uct_promotional_balance_cents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>