metadata-sfdx/force-app/main/default/objects/becquerel_qs_dollar_balance__x/fields/user_pk_id__c.field-meta.xml
<CustomField>
    <fullName>user_pk_id__c</fullName>
    <description>user_pk_id</description>
    <externalDeveloperName>user_pk_id</externalDeveloperName>
    <label>user_pk_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>